--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>API Data</title>
+    
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    
     <div id="data-container">
-        <!-- Placeholder for API data -->
-        <p>loading...</p>
-        <ul></ul>
-    </div>
+    <h1 id="art_title"></h1> 
+    <p id='descript'></p>
+
+       </div>
+    <div id="img">
+        <img id="image" />
+    </div>  
 
     <script src="index.js"></script>
 </body>
-</html>
