Reverting to previous version

--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+    <title>API Data</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
     <div id="data-container">
-    <h1 id="art_title"></h1> 
-    <p id='descript'></p>
-
-       </div>
-    <div id="img">
-        <img id="image" />
-    </div>  
+        <!-- Placeholder for API data -->
+        <p>loading...</p>
+        <ul></ul>
+    </div>
 
     <script src="index.js"></script>
 </body>
+</html>
